--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <img src="images/cofe.png" alt="coffee">
+                        <div class="photo"><img src="images/cofe.png" alt="coffee"></div>
                     </div>
 
                     <div class="left drink">
@@ -71,7 +71,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <img src="images/tea.webp" alt="tea">
+                        <div class="photo"><img src="images/tea.webp" alt="tea"></div>
                     </div>
 
                     <div class="right drink">
@@ -86,7 +86,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <img src="images/milk.jpg" alt="milk">
+                        <div class="photo"><img src="images/milk.jpg" alt="milk"></div>
                     </div>
 
                     <div class="left drink">
@@ -101,7 +101,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <img src="images/latte.webp" alt="latte">
+                        <div class="photo"><img src="images/latte.webp" alt="latte"></div>
                     </div>
                 </div>
 
@@ -119,7 +119,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <img src="images/cola.jpg" alt="cola">
+                        <div class="photo"><img src="images/cola.jpg" alt="cola"></div>
                     </div>
 
                     <div class="left drink">
@@ -134,7 +134,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <img src="images/juice.jpg" alt="juice">
+                        <div class="photo"><img src="images/juice.jpg" alt="juice"></div>
                     </div>
                 </div>
 
@@ -152,7 +152,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <img src="images/waffle.jpeg" alt="waffle">
+                        <div class="photo"><img src="images/waffle.jpeg" alt="waffle"></div>
                     </div>
                 </div>
             </section>
